WebRTC: silence data not sent for disabled audio track https://bugs.webkit.org/show_bug.cgi?id=174456 <rdar://problem/33284623>

Patch by Youenn Fablet <youenn@apple.com> on 2017-07-14
Reviewed by Eric Carlson.

Source/WebCore:

Test: webrtc/audio-muted-stats.html
      webrtc/audio-muted-stats2.html

Adding a timer-based approach to send 10ms of silence every second.
This is consistent with how muted video tracks are implemented.
In case the audio track is muted at the time it is added, no silence data is sent.

* platform/mediastream/mac/RealtimeOutgoingAudioSource.cpp:
(WebCore::RealtimeOutgoingAudioSource::RealtimeOutgoingAudioSource):
(WebCore::RealtimeOutgoingAudioSource::initializeConverter):
(WebCore::RealtimeOutgoingAudioSource::stop):
(WebCore::RealtimeOutgoingAudioSource::sourceMutedChanged):
(WebCore::RealtimeOutgoingAudioSource::sourceEnabledChanged):
(WebCore::RealtimeOutgoingAudioSource::handleMutedIfNeeded):
(WebCore::RealtimeOutgoingAudioSource::sendSilence):
* platform/mediastream/mac/RealtimeOutgoingAudioSource.h:

LayoutTests:

* webrtc/audio-muted-stats-expected.txt: Added.
* webrtc/audio-muted-stats.html: Added.
* webrtc/audio-muted-stats2-expected.txt: Added.
* webrtc/audio-muted-stats2.html: Added.

Canonical link: https://commits.webkit.org/191346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219524 268f45cc-cd09-0410-ab3c-d52691b4dbfc